fix sticky header on mobile

--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -540,9 +540,9 @@ td {
   }
 
   .site-header {
-    position: sticky;
-    top: 0;
-    z-index: 10;
+    position: static;
+    top: auto;
+    z-index: auto;
   }
 
   .pub-row {
